tools/c7n_gcp/tests/data/flights/firewall-modify/get-compute-v1-projects-cloud-custodian-global-firewalls-test_1.json
{
  "headers": {
    "etag": "mKIkXzG_CsXtACJ-pjHU1QvbY6E=/XOjuCw1ioqrMA3GKAKOgT_Op8EQ=",
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Wed, 17 Mar 2021 19:54:48 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3-29=\":443\"; ma=2592000,h3-T051=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "656",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/test?alt=json"
  },
  "body": {
    "id": "4853772226933023804",
    "creationTimestamp": "2021-03-17T12:38:59.990-07:00",
    "name": "test",
    "description": "",
    "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
    "priority": 500,
    "sourceRanges": [
      "1.1.1.1"
    ],
    "targetTags": [
      "newtag"
    ],
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/test",
    "kind": "compute#firewall"
  }
}
